--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  splashscreen: ^1.2.0
+  flare_flutter: ^2.0.1
 
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +50,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-    - images\icon1.png
+    - images/icon1.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
